[package]
name = "twmarquee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.1" }
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls"], default-features = false }
clap = { version = "3", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
